--- a/index.html
+++ b/index.html
@@ -72,14 +72,14 @@
 						<div class="services__items">
 							<div class="services__item item-services">
 								<div class="item-services__icon">
-									<img src="/img/services/volume.svg" alt="">
+									<img src="img/services/volume.svg" alt="">
 								</div>
 								<div class="item-services__title">Online Marketing</div>
 								<div class="item-services__text">The internet has transformed business marketing. It is the heart of our company.</div>
 							</div>
 							<div class="services__item item-services">
 								<div class="item-services__icon">
-									<img src="/img/services/layout.svg" alt="">
+									<img src="img/services/layout.svg" alt="">
 								</div>
 								<div class="item-services__title">Web Development</div>
 								<div class="item-services__text">
@@ -88,14 +88,14 @@
 							</div>
 							<div class="services__item item-services">
 								<div class="item-services__icon">
-									<img src="/img/services/heart.svg" alt="">
+									<img src="img/services/heart.svg" alt="">
 								</div>
 								<div class="item-services__title">Website Design</div>
 								<div class="item-services__text">Web design refers to the design of websites that are displayed on the internet.</div>
 							</div>
 							<div class="services__item item-services">
 								<div class="item-services__icon">
-									<img src="/img/services/search.svg" alt="">
+									<img src="img/services/search.svg" alt="">
 								</div>
 								<div class="item-services__title">SEO Optimization</div>
 								<div class="item-services__text">SEO is the process of improving the quality and quantity of website traffic to a website.</div>
